Upgrade frontend for signing in feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,9 @@
             </div>
             <button type="submit">Signup</button>
         </form>
+        <p>Already have an account?</p>
+		<button onclick="window.location.href='/signin.html'">Go to Sign In</button>
+
         <p id="message" class="hidden"></p>
     </div>
     <script src="script.js"></script>
